<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_item_library"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_library"/>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_preferences"/>
    <item
        android:id="@+id/menu_item_playlist"
        android:icon="@drawable/btn_playlist"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_playlist"/>

</menu>