<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_item_player"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_player"/>
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_preferences"/>

</menu>