<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000" >

        <!-- Header Starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="60dip"
                android:background="@layout/login_header_logo"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dip"
                android:text="@string/app_name"
                android:textColor="#0000cc"
                android:textSize="32sp" />
        </LinearLayout>

        <!-- Header Ends -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip" >

            <TextView
                android:id="@+id/hostname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hostname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/hostname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:text="@string/defaults_hostname" >
            </EditText>

            <TextView
                android:id="@+id/port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/port_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:inputType="number"
                android:singleLine="true"
                android:text="@integer/defaults_port_number" >
            </EditText>

            <CheckBox
                android:id="@+id/login_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/login_required_checkbox" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>